[tool.poetry]
authors = ["Josef Frank <josef.frank@climaterisk.com.au>"]
description = ""
name = "gnaf-test"
version = "0.1.0"

[tool.poetry.dependencies]
address-net = {git = "https://github.com/Aretle/address-net.git"}
psycopg2 = "^2.9.3"
python = "^3.8"
tensorflow = "2.5"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
