[tool.poetry]
authors = ["Josef Frank <josef.frank@climaterisk.com.au>"]
description = ""
name = "gnaf-test"
version = "0.1.0"

[tool.poetry.dependencies]
address-net = { git = "https://github.com/Aretle/address-net.git" }
psycopg2-binary = "^2.9.3"
python = "~3.9"
tensorflow = "~2.8"
pandas = "^1.4.1"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
